--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 	</div>
 </div>
 <canvas id="canvas">Canvas is not supported in your browser.</canvas>
-<div class="center-button">
-	<a href="caesar.html">
-		<button class="blue-button">Déchiffrer 🗝️💚</button>
-	</a>
+<a href="caesar.html" class="blue-button">Déchiffrer 🗝️💚</a>
+
 <!-- partial -->
   <script type="module" src="./script.js"></script>
 
