--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 	</div>
 </div>
 <canvas id="canvas">Canvas is not supported in your browser.</canvas>
-<a href="caesar.html" class="blue-button">Déchiffrer 🗝️💚</a>
+<div class="center-button">
+	<a href="caesar.html" class="blue-button">Déchiffrer 🗝️💚</a>
 
 <!-- partial -->
   <script type="module" src="./script.js"></script>
