--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </div>
 
 <div class="hb-container">
-	<h3 class="happy">Joyeuse</h3>
+	<h3 class="happy">Joyeux</h3>
 	<h3 class="twentyseven">5² - 3 Ans
 	</br>(ça fait moins vieux)
 	</h3>
